--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <!-- HOME -->
     <section
       id="home"
-      class="flex flex-col justify-center items-center sm:pt-32 lg:pt-36 py-12 mt-12"
+      class="flex flex-col justify-center items-center pt-36 py-12 mt-12"
     >
       <div class="w-full max-w-7xl px-4 sm:px-6">
         <!-- Heading -->
@@ -327,13 +327,11 @@
           </p>
         </div>
 
-        <!-- CTA Button -->
-        <div
-          class="mt-6 items-center text-center bg-rose-400/50 rounded-full border border-rose-600 border-dashed"
-        >
+        <!-- CTA Button with Wobble -->
+        <div class="mt-8 flex justify-center">
           <a
             href="shop.html"
-            class="bg-rose-500 hover:bg-rose-600 text-white font-semibold px-6 py-3 rounded-lg shadow-md transition-all duration-300"
+            class="bg-rose-600 text-white font-semibold px-10 py-4 rounded-2xl shadow-lg sm:w-auto md:w-1/4 text-center transition-all duration-300 hover:shadow-xl wobble-on-hover"
           >
             Shop Now
           </a>
