--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         </div>
 
         <!-- Swiper Carousel -->
-        <div class="swiper w-full mt-12">
+        <div class="swiper w-full mt-12 z-10">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img
@@ -487,7 +487,7 @@
       <!-- 🛒 Cart Modal -->
       <div
         id="cartContainer"
-        class="cartModal fixed inset-0 bg-black/75 hidden justify-center items-center p-4 z-50"
+        class="cartModal fixed inset-0 bg-black/75 hidden justify-center items-center p-4 z-[9999]"
       >
         <div class="bg-white p-4 sm:p-6 rounded-lg w-full max-w-xs sm:max-w-sm">
           <h2 class="text-xl sm:text-2xl font-semibold mb-4">Your Cart</h2>
@@ -517,7 +517,7 @@
       <!-- Cart Counter -->
       <button
         id="cartButton"
-        class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer"
+        class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer z-[9999]"
       >
         🛒 Cart: <span id="cartCount">0</span>
       </button>
