--- a/index.html
+++ b/index.html
@@ -70,16 +70,17 @@
   <body>
     <!-- HEADER AND NAVI BAR -->
     <header
-      class="fixed top-0 z-40 w-full border-b bg-rose-600/80 backdrop-blur-sm border-rose-500"
+      class="fixed top-0 z-[9999] w-full border-b bg-rose-500/80 backdrop-blur-sm border-rose-400"
       x-data="{ open: false }"
       aria-label="Main site header"
+      style="text-shadow: 2px 2px 4px rgba(66, 62, 62, 0.7)"
     >
       <nav
-        class="mx-auto flex max-w-7xl items-center justify-between p-3 lg:px-8"
+        class="mx-auto flex max-w-7xl items-center justify-between p-3 lg:px-8 font-sans text-white"
       >
         <!-- Logo -->
         <div
-          class="flex items-center gap-3 bg-pink-100/80 p-1 px-2 border border-red-600 rounded-2xl"
+          class="flex items-center gap-3 bg-pink-100/80 p-1 px-2 border border-rose-400 rounded-2xl"
         >
           <a href="#home" class="flex items-center gap-2">
             <img
@@ -87,7 +88,9 @@
               alt="Sunny Delights logo"
               class="h-6 sm:h-8 w-auto"
             />
-            <h1 class="font-bold italic text-red-600 text-sm sm:text-base">
+            <h1
+              class="font-extrabold italic text-rose-600 text-sm sm:text-base tracking-wide"
+            >
               Sunny Delights
             </h1>
           </a>
@@ -110,11 +113,9 @@
             >
               <svg
                 class="h-5 w-5 text-white"
-                xmlns="http://www.w3.org/2000/svg"
                 fill="none"
                 viewBox="0 0 24 24"
                 stroke="currentColor"
-                aria-hidden="true"
               >
                 <path
                   stroke-linecap="round"
@@ -124,7 +125,6 @@
                 />
               </svg>
             </div>
-
             <ul
               id="hits-dropdown"
               class="absolute top-full left-0 w-full mt-1 bg-white text-rose-800 rounded-lg shadow-lg max-h-60 overflow-y-auto hidden z-50"
@@ -133,26 +133,34 @@
         </div>
 
         <!-- Desktop links -->
-        <div
-          class="hidden lg:flex items-center gap-8 text-pink-100 font-semibold"
-        >
-          <a href="index.html" class="hover:text-whit transition-colors"
+        <div class="hidden lg:flex items-center gap-8 font-medium text-white">
+          <a
+            href="index.html"
+            class="hover:bg-rose-600/70 px-2 py-1 rounded transition"
             >Home</a
           >
-          <a href="aboutus.html" class="hover:text-white transition-colors"
+          <a
+            href="aboutus.html"
+            class="hover:bg-rose-600/70 px-2 py-1 rounded transition"
             >About</a
           >
-          <a href="contactus.html" class="hover:text-white transition-colors"
+          <a
+            href="contactus.html"
+            class="hover:bg-rose-600/70 px-2 py-1 rounded transition"
             >Contact</a
           >
-          <a href="faq.html" class="hover:text-white transition-colors">FAQ</a>
+          <a
+            href="faq.html"
+            class="hover:bg-rose-600/70 px-2 py-1 rounded transition"
+            >FAQ</a
+          >
         </div>
 
         <!-- Mobile menu button -->
         <div class="flex items-center lg:hidden">
           <button
             type="button"
-            class="inline-flex h-8.5 items-center justify-center rounded-md p-2 text-pink-100/80 bg-rose-700 border border-white/40"
+            class="inline-flex items-center justify-center rounded-md p-2 text-white bg-rose-600/80 border border-rose-400 hover:bg-rose-600/70"
             @click="open = !open"
             :aria-expanded="open"
             aria-label="Toggle menu"
@@ -163,7 +171,6 @@
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              aria-hidden="true"
             >
               <path
                 stroke-linecap="round"
@@ -187,28 +194,15 @@
         x-transition:leave-end="translate-x-full opacity-0"
         @keydown.escape.window="open = false"
         @click.outside="open = false"
-        class="fixed inset-0 z-40 bg-rose-600 text-pink-100 flex flex-col h-screen overflow-hidden"
+        class="fixed inset-y-0 right-0 w-3/4 bg-rose-500/90 backdrop-blur-sm text-white flex flex-col h-screen overflow-hidden border-l border-rose-400 font-sans"
         role="dialog"
         aria-modal="true"
       >
-        <div class="flex items-center justify-between px-6 pt-6">
-          <div
-            class="flex items-center gap-3 bg-pink-100/80 p-1 px-2 border border-red-600 rounded-2xl"
-          >
-            <a href="#home" class="flex items-center gap-2">
-              <img
-                src="public/icon.png"
-                alt="Sunny Delights logo"
-                class="h-6 sm:h-8 w-auto"
-              />
-              <h1 class="font-bold italic text-red-600 text-sm sm:text-base">
-                Sunny Delights
-              </h1>
-            </a>
-          </div>
+        <!-- Top bar with close button only -->
+        <div class="flex items-center justify-end px-6 pt-6">
           <button
             type="button"
-            class="rounded-md p-2.5 text-white hover:bg-white/10"
+            class="rounded-md p-2.5 text-white hover:bg-rose-600/70"
             @click="open = false"
             aria-label="Close menu"
           >
@@ -228,15 +222,15 @@
           </button>
         </div>
 
-        <!-- after the last category link inside the sidebar nav -->
-        <div class="mt-4 border-t border-white/20 pt-4">
+        <!-- Search Input -->
+        <div class="mt-4 border-t border-white/20 pt-4 px-6">
           <label for="mobile-searchbox" class="sr-only">Search candies</label>
           <div class="relative">
             <input
               id="mobile-searchbox"
               type="text"
               placeholder="Search candies..."
-              class="w-full pl-10 pr-4 py-2 rounded-full focus:outline-none focus:ring-2 focus:ring-white text-white placeholder-white bg-rose-500/70 border border-white/10"
+              class="w-full pl-10 pr-4 py-2 rounded-full focus:outline-none focus:ring-2 focus:ring-white text-white placeholder-white bg-rose-400/60 border border-white/10"
             />
             <div
               class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
@@ -264,40 +258,41 @@
           </div>
         </div>
 
+        <!-- Nav Links -->
         <nav class="mt-6 px-6 pb-6 flex flex-col justify-start space-y-3">
           <a
             href="#home"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            class="block px-3 py-2 font-medium hover:bg-rose-600/70 rounded"
             @click="open = false"
             >Home</a
           >
           <a
             href="aboutus.html"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            class="block px-3 py-2 font-medium hover:bg-rose-600/70 rounded"
             @click="open = false"
             >About</a
           >
           <a
             href="contactus.html"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            class="block px-3 py-2 font-medium hover:bg-rose-600/70 rounded"
             @click="open = false"
             >Contact</a
           >
           <a
             href="faq.html"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            class="block px-3 py-2 font-medium hover:bg-rose-600/70 rounded"
             @click="open = false"
-            >Faq</a
+            >FAQ</a
           >
           <a
             href="events.html"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            class="block px-3 py-2 font-medium hover:bg-rose-600/70 rounded"
             @click="open = false"
             >Events</a
           >
           <a
             href="jobs.html"
-            class="block px-3 py-2 font-semibold text-pink-100 hover:bg-pink-100/10 rounded"
+            class="block px-3 py-2 font-medium hover:bg-rose-600/70 rounded"
             @click="open = false"
             >Jobs</a
           >
@@ -487,7 +482,7 @@
       <!-- 🛒 Cart Modal -->
       <div
         id="cartContainer"
-        class="cartModal fixed inset-0 bg-black/75 hidden justify-center items-center p-4 z-[9999]"
+        class="cartModal fixed inset-0 bg-black/75 hidden justify-center items-center p-4 z-50"
       >
         <div class="bg-white p-4 sm:p-6 rounded-lg w-full max-w-xs sm:max-w-sm">
           <h2 class="text-xl sm:text-2xl font-semibold mb-4">Your Cart</h2>
@@ -517,7 +512,7 @@
       <!-- Cart Counter -->
       <button
         id="cartButton"
-        class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer z-[9999]"
+        class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer z-60"
       >
         🛒 Cart: <span id="cartCount">0</span>
       </button>
