added the same hover effects on header as footer

--- a/index.html
+++ b/index.html
@@ -136,24 +136,36 @@
         <div class="hidden lg:flex items-center gap-8 font-medium text-white">
           <a
             href="index.html"
-            class="hover:bg-rose-600/70 px-2 py-1 rounded transition"
-            >Home</a
+            class="hover:bg-rose-600/70 px-3 py-1 rounded transition"
           >
+            <span class="inline-block transition-transform hover:translate-x-1"
+              >Home</span
+            >
+          </a>
           <a
             href="aboutus.html"
-            class="hover:bg-rose-600/70 px-2 py-1 rounded transition"
-            >About</a
+            class="hover:bg-rose-600/70 px-3 py-1 rounded transition"
           >
+            <span class="inline-block transition-transform hover:translate-x-1"
+              >About</span
+            >
+          </a>
           <a
             href="contactus.html"
-            class="hover:bg-rose-600/70 px-2 py-1 rounded transition"
-            >Contact</a
+            class="hover:bg-rose-600/70 px-3 py-1 rounded transition"
           >
+            <span class="inline-block transition-transform hover:translate-x-1"
+              >Contact</span
+            >
+          </a>
           <a
             href="faq.html"
-            class="hover:bg-rose-600/70 px-2 py-1 rounded transition"
-            >FAQ</a
+            class="hover:bg-rose-600/70 px-3 py-1 rounded transition"
           >
+            <span class="inline-block transition-transform hover:translate-x-1"
+              >FAQ</span
+            >
+          </a>
         </div>
 
         <!-- Mobile menu button -->
