trying different bg colours

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
     </section>
 
     <!-- PRODUCTS -->
-    <section id="products" class="bg-pink-100 p-4 sm:p-5">
+    <section id="products" class="p-4 sm:p-5">
       <div
         id="productGrid"
         class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4"
@@ -544,7 +544,7 @@
     </div>
 
     <!-- BLOG -->
-    <section id="blog" class="flex flex-col items-center bg-pink-50 py-16">
+    <section id="blog" class="flex flex-col items-center py-16">
       <!-- Intro Block -->
       <div class="w-full max-w-4xl rounded-3xl p-8 sm:p-10 md:p-12 text-center">
         <h2
