--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="public/icon.png" />
+    <link rel="icon" type="image/png" href="/public/icon.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -93,7 +93,7 @@
         <!-- CTA Button with Wobble -->
         <div class="mt-8 flex justify-center">
           <a
-            href="shop.html"
+            href="/pages/shop.html"
             class="bg-rose-600 text-white font-semibold px-10 py-4 rounded-2xl shadow-lg sm:w-auto md:w-1/4 text-center transition-all duration-300 hover:shadow-xl wobble-on-hover"
           >
             Shop Now
@@ -203,87 +203,6 @@
           class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-stretch"
         ></div>
       </div>
-    </section>
-
-    <!-- PRODUCTS -->
-    <section id="products" class="p-4 sm:p-5">
-      <div
-        id="productGrid"
-        class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4"
-      ></div>
-
-      <!-- Modal Structure -->
-      <div
-        id="productModal"
-        class="modal fixed inset-0 bg-black/75 hidden justify-center items-center p-4 z-50"
-      >
-        <div class="bg-white p-4 sm:p-6 rounded-lg w-full max-w-xs sm:max-w-sm">
-          <img
-            id="modalImage"
-            class="w-full h-40 sm:h-48 object-cover rounded-md mb-3 sm:mb-4"
-            src=""
-            alt="Product Image"
-          />
-          <p id="modalTitle" class="text-xl sm:text-2xl font-semibold mb-2"></p>
-          <p
-            id="modalDescription"
-            class="text-gray-700 mb-2 text-sm sm:text-base"
-          ></p>
-          <p id="modalPrice" class="text-lg font-bold mb-4"></p>
-          <div class="flex justify-center items-center gap-3 sm:gap-5">
-            <button
-              id="addToCartButton"
-              class="bg-rose-600 text-white px-3 py-1 sm:px-4 sm:py-2 rounded hover:bg-rose-700 hover:cursor-pointer"
-            >
-              Add to Cart
-            </button>
-            <button
-              id="closeModal"
-              class="border border-red-600 text-rose-600 px-3 py-1 sm:px-5 sm:py-2 rounded hover:bg-rose-700 hover:text-white hover:cursor-pointer"
-            >
-              Close
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <!-- 🛒 Cart Modal -->
-      <div
-        id="cartContainer"
-        class="cartModal fixed inset-0 bg-black/75 hidden justify-center items-center p-4 z-50"
-      >
-        <div class="bg-white p-4 sm:p-6 rounded-lg w-full max-w-xs sm:max-w-sm">
-          <h2 class="text-xl sm:text-2xl font-semibold mb-4">Your Cart</h2>
-          <div
-            id="cartItems"
-            class="mb-3 sm:mb-4 max-h-60 overflow-y-auto pr-1 space-y-2"
-          >
-            <!-- Cart items will be injected here -->
-          </div>
-
-          <p class="text-base sm:text-lg font-bold">
-            Total: <span id="cartTotal">$0.00</span>
-          </p>
-          <div
-            class="flex justify-center items-center gap-3 sm:gap-5 mt-3 sm:mt-4"
-          >
-            <button
-              id="closeCart"
-              class="border border-red-600 text-rose-600 px-3 py-1 sm:px-5 sm:py-2 rounded hover:bg-rose-700 hover:text-white hover:cursor-pointer"
-            >
-              Close
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <!-- Cart Counter -->
-      <button
-        id="cartButton"
-        class="fixed bottom-4 right-4 bg-rose-600 text-white px-3 py-2 sm:px-4 sm:py-2 rounded-full hover:bg-rose-700 hover:cursor-pointer z-60"
-      >
-        🛒 Cart: <span id="cartCount">0</span>
-      </button>
     </section>
 
     <!-- DIVIDERS -->
@@ -431,8 +350,8 @@
       }
     </script>
     <script src="js/inject.js"></script>
-    <script src="js/cart.js"></script>
     <script src="js/shop.js"></script>
+    <script src="js/cart.js"></script>
     <script src="js/index.js"></script>
   </body>
 </html>
