removed redudancy in alt and links, fixed headings, working on cart and paths, experimenting with a11y approved colours

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     />
     <title>Sunny Delights | A Sweet Dream</title>
   </head>
-  <body>
+  <body class="home-page">
     <!-- HEADER AND NAVI BAR -->
     <div id="header"></div>
 
