removed redudancy further by using only one cart in header and fixed paths

--- a/pages/about.html
+++ b/pages/about.html
@@ -76,6 +76,6 @@
     <!-- ALGOLIA -->
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4/dist/algoliasearch-lite.umd.js"></script>
     <!-- COMPONENTS -->
-    <script src="/js/inject.js"></script>
+    <script src="../js/inject.js"></script>
   </body>
 </html>
