new colours in header and footer - working on other sections

--- a/index.html
+++ b/index.html
@@ -105,28 +105,6 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img
-                src="public/chocolates.png"
-                alt="Chocolate Hearts"
-                class="w-full h-56 sm:h-64 md:h-72 object-cover"
-              />
-            </div>
-
-            <div class="swiper-slide">
-              <img
-                src="public/cakes.png"
-                alt="Brownie Stacks"
-                class="w-full h-56 sm:h-64 md:h-72 object-cover"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                src="public/cotton-candy.png"
-                alt="Cotton Candy"
-                class="w-full h-56 sm:h-64 md:h-72 object-cover"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
                 src="https://images.pexels.com/photos/6798343/pexels-photo-6798343.jpeg?auto=compress&cs=tinysrgb&w=600"
                 alt="Strawberry Lollipops"
                 class="w-full h-56 sm:h-64 md:h-72 object-cover"
@@ -152,6 +130,29 @@
               <img
                 src="https://images.pexels.com/photos/827513/pexels-photo-827513.jpeg?auto=compress&cs=tinysrgb&w=600"
                 alt="Forest Gift"
+                class="w-full h-56 sm:h-64 md:h-72 object-cover"
+              />
+            </div>
+
+            <div class="swiper-slide">
+              <img
+                src="https://images.pexels.com/photos/1693027/pexels-photo-1693027.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="Nutty Chocolate Bar"
+                class="w-full h-56 sm:h-64 md:h-72 object-cover"
+              />
+            </div>
+
+            <div class="swiper-slide">
+              <img
+                src="https://images.pexels.com/photos/5386671/pexels-photo-5386671.jpeg"
+                alt="Brownie"
+                class="w-full h-56 sm:h-64 md:h-72 object-cover"
+              />
+            </div>
+            <div class="swiper-slide">
+              <img
+                src="https://images.pexels.com/photos/4161223/pexels-photo-4161223.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="Nutty Caramel Pie"
                 class="w-full h-56 sm:h-64 md:h-72 object-cover"
               />
             </div>
@@ -333,7 +334,7 @@
       const swiperEl = document.querySelector(".swiper");
       if (swiperEl) {
         new Swiper(".swiper", {
-          spaceBetween: 12,
+          spaceBetween: 10,
           loop: true,
           pagination: { el: ".swiper-pagination", clickable: true },
           autoplay: { delay: 2500, disableOnInteraction: false },
