used absolute paths

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         });
       }
     </script>
-    <script src="js/inject.js"></script>
+    <script src="/js/inject.js"></script>
     <script src="js/shop.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/index.js"></script>
