changed styles on index

--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
     <!-- HOME -->
     <section
       id="home"
-      class="flex flex-col justify-center items-center pt-36 py-12 mt-12"
+      class="flex flex-col justify-center items-center pt-36 py-12 my-12"
     >
       <div class="w-full max-w-7xl px-4 sm:px-6">
         <!-- INTRO -->
         <div class="text-center justify-center items-center">
-          <h1 class="uppercase font-bold text-2xl sm:text-3xl mb-4">
+          <h1
+            class="uppercase text-rose-600 font-bold text-2xl sm:text-3xl mb-4"
+          >
             Soft as a Cloud Sweet as a Dream
           </h1>
           <p class="text-gray-700/80 sm:text-base md:text-lg font-medium">
@@ -164,54 +166,19 @@
       </div>
     </section>
 
-    <!-- DIVIDERS -->
-    <div class="dividers">
+    <!--  BEST SELLERS -->
+    <section class="w-full py-16 bg-rose-300">
       <div
-        class="w-full h-px border-t border-dashed border-rose-400 my-6"
-      ></div>
-      <div
-        class="w-full h-3 bg-gradient-to-r from-pink-100 via-rose-600 to-pink-200 shadow-md rounded"
-      ></div>
-      <div
-        class="w-full h-px border-t border-dashed border-rose-400 my-6"
-      ></div>
-    </div>
-
-    <!-- NEW ARRIVALS AND BEST SELLERS -->
-    <section id="display" class="max-w-7xl flex flex-col items-center mx-auto">
-     <!-- <div class="w-full flex flex-col items-center p-6 sm:p-5">
-        <h1 class="uppercase font-bold text-2xl sm:text-3xl mb-6 text-center">
-          New Arrivals
-        </h1>
-        <div
-          id="newProducts"
-          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-stretch"
-        ></div>
-      </div> -->
-
-      <div class="w-full flex flex-col items-center p-6 sm:p-5 mt-12">
-        <h1 class="uppercase font-bold text-2xl sm:text-3xl mb-6 text-center">
+        class="w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col items-center"
+      >
+        <h1
+          class="uppercase font-bold text-2xl sm:text-3xl mb-12 text-center text-rose-600"
+        >
           Best Sellers
         </h1>
-        <div
-          id="bestSellers"
-          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-stretch"
-        ></div>
+        <div id="bestSellers" class="w-full"></div>
       </div>
     </section>
-
-    <!-- DIVIDERS -->
-    <div class="dividers">
-      <div
-        class="w-full h-px border-t border-dashed border-rose-400 my-6"
-      ></div>
-      <div
-        class="w-full h-3 bg-gradient-to-r from-pink-100 via-rose-600 to-pink-200 shadow-md rounded"
-      ></div>
-      <div
-        class="w-full h-px border-t border-dashed border-rose-400 my-6"
-      ></div>
-    </div>
 
     <!-- BLOG -->
     <section id="blog" class="flex flex-col items-center py-16">
