edits on pages paths

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/public/icon.png" />
+    <link rel="icon" type="image/png" href="./public/icon.png" />
 
-    <link rel="stylesheet" href="/src/output.css" />
+    <link rel="stylesheet" href="./src/output.css" />
     <!-- remix icons -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
@@ -76,6 +76,6 @@
     <!-- ALGOLIA -->
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4/dist/algoliasearch-lite.umd.js"></script>
     <!-- COMPONENTS -->
-    <script src="/js/inject.js"></script>
+    <script src="./js/inject.js"></script>
   </body>
 </html>
