--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/public/icon.png" />
-    <link rel="stylesheet" href="/src/output.css" />
+    <link rel="icon" type="image/png" href="./public/icon.png" />
+    <link rel="stylesheet" href="./src/output.css" />
     <!-- remix icons -->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
@@ -198,6 +198,6 @@
     ></script>
 
     <!-- COMPONENTS -->
-    <script src="/js/inject.js"></script>
+    <script src="./js/inject.js"></script>
   </body>
 </html>
