--- a/pages/shop.html
+++ b/pages/shop.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./public/icon.png" />
-    <link rel="stylesheet" href="./src/output.css" />
+    <link rel="icon" type="image/png" href="./../public/icon.png" />
+    <link rel="stylesheet" href="./../src/output.css" />
     <!-- seo meta tags -->
     <!-- Primary Meta Tags -->
     <meta name="title" content="Sunny Delights | A Sweet Dream" />
