change on path in contact.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- CTA BUTTON -->
         <div class="mt-8 flex justify-center">
           <a
-            href="/pages/shop.html"
+            href="./pages/shop.html"
             class="relative inline-block font-bold text-white px-12 py-4 rounded-full bg-gradient-to-b from-[#A80054] via-[#FF1E66] to-[#FF5C99] shadow-lg shadow-[#A80054]/50 text-center transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:shadow-[#A80054]/70 wobble-on-hover"
           >
             Shop Now
