edited paths in other pages

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./public/icon.png" />
+    <link rel="icon" type="image/png" href="./../public/icon.png" />
     <title>Sunny Delights | Checkout</title>
-    <link rel="stylesheet" href="./src/output.css" />
+    <link rel="stylesheet" href="./../src/output.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -93,7 +93,7 @@
       });
     </script>
 
-    <script src="./js/inject.js"></script>
+    <script src="./../js/inject.js"></script>
     <script>
       // Inject header/footer
       document.addEventListener("DOMContentLoaded", async () => {
