--- a/pages/shop.html
+++ b/pages/shop.html
@@ -74,9 +74,9 @@
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
     <!-- COMPONENTS -->
-    <script src="/js/inject.js"></script>
+    <script src="./../js/inject.js"></script>
 
     <!-- SHOP SCRIPT -->
-    <script src="./js/shop.js"></script>
+    <script src="./../js/shop.js"></script>
   </body>
 </html>
