fixed about img path

--- a/pages/about.html
+++ b/pages/about.html
@@ -57,7 +57,7 @@
         <!-- Image Column -->
         <div class="flex justify-center items-center mx-auto md:justify-end">
           <img
-            src="/public/store.png"
+            src="/E-commerce-site/public/store.png"
             alt="Sunny Delights storefront"
             class="rounded-lg shadow-md w-80 md:w-[24rem] object-cover"
           />
